schema/testdata/validation_enum_default_multiple_conditions/schema.keel
model Post {
    fields {
        published Boolean @default(true or false)
    }
}
