schema/testdata/errors/enum_default_multiple_conditions.keel
model Post {
    fields {
        //expect-error:41:43:AttributeExpressionError:operator 'or' not supported in this context
        published Boolean @default(true or false)
    }
}
